After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 793483 - gl/wayland: Memory leak when display couldn't connect
gl/wayland: Memory leak when display couldn't connect
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.13.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-02-15 10:24 UTC by Víctor Manuel Jáquez Leal
Modified: 2018-02-16 13:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gl/wayland: Memory leak when display couldn't connect (1.06 KB, patch)
2018-02-15 10:24 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2018-02-15 10:24:03 UTC
See commit message
Comment 1 Víctor Manuel Jáquez Leal 2018-02-15 10:24:09 UTC
Created attachment 368369 [details] [review]
gl/wayland: Memory leak when display couldn't connect

When trying to create a wayland display, it may fail because there
is not actually display to connect. It this case NULL is returned
but the created instance is not freed.

This patch unrefs the failed display.
Comment 2 Víctor Manuel Jáquez Leal 2018-02-16 13:01:42 UTC
Attachment 368369 [details] pushed as 1784f62 - gl/wayland: Memory leak when display couldn't connect